# terminal

./: meson.build
src/: MainWindow.cpp  MainWindow.h  Serial.cpp  Serial.h  errors.cpp  errors.h  main.cpp  meson.build  paths.cpp  paths.h
src/config/: BaudSelect.cpp  BaudSelect.h  ButtonPack.cpp  ButtonPack.h  ConfigPack.cpp  ConfigPack.h  DataSelect.cpp  DataSelect.h  ParamSelect.h  ParitySelect.cpp  ParitySelect.h  PortSelect.cpp  PortSelect.h  StopSelect.cpp  StopSelect.h
src/receive/: DataView.cpp  DataView.h  RecvBytesLabel.cpp  RecvBytesLabel.h  StatusPack.cpp  StatusPack.h
src/transmit/: MacroEdit.cpp  MacroEdit.h  Macros.cpp  Macros.h  SendView.cpp  SendView.h
test/terminal-test/src/: main.cpp
