sources = files(
    'main.cpp',
    'MainWindow.cpp',
    'Serial.cpp',
    'errors.cpp',
    'paths.cpp',
    'config/ConfigPack.cpp',
    'config/ButtonPack.cpp',
    'config/BaudSelect.cpp',
    'config/DataSelect.cpp',
    'config/StopSelect.cpp',
    'config/PortSelect.cpp',
    'config/ParitySelect.cpp',
    'receive/DataView.cpp',
    'receive/StatusPack.cpp',
    'receive/RecvBytesLabel.cpp',
    'transmit/SendView.cpp',
    'transmit/Macros.cpp',
    'transmit/MacroEdit.cpp'
)